--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -33,6 +33,8 @@
     }
     #logo {
         margin-left: 10px;
+        width: 8%;
+        height: auto;
     }
     #logo-container p{
         padding: 2%;
@@ -41,7 +43,7 @@
         font-size: 2vw;
     }
     #banner > a {
-        font-size: 20px;
+        font-size: 2vw;
     }
     #main-grid {  
         max-width: 100%;  
@@ -53,7 +55,8 @@
         grid-gap: 3%;
     }
     #home-title {
-        left: 14%;
+        top: 5%;
+        left: 10%;
     }
     #events {
     grid-column: 2/3;
@@ -107,6 +110,7 @@
     }
     footer > p {
         padding-right: 35px;
+        margin-left: 2%;
     }
     
 /* --------DISCOVER PAGE----------- */
